// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List Item with expense details 1`] = `
<article
  className="expense-list__item"
>
  <header
    className="expense-list__item__header"
  >
    <h4
      className="expense-list__item__header__description"
    >
      <Link
        className="expense-list__item__header__description--link"
        to="/edit/1"
      >
        Food
      </Link>
    </h4>
    <time
      className="expense-list__item__header__date"
      dateTime="Thu, 08 Apr 2021 23:00:00 GMT"
    >
      9 April 2021
    </time>
  </header>
  <section
    className="expense-list__item__note"
  >
    <p>
      Bought food for mastication
    </p>
  </section>
  <section
    className="expense-list__item__amount"
  >
    <data
      value={1050}
    >
      €10.50
    </data>
  </section>
</article>
`;

exports[`should render Expense List Item with expense details and different currency 1`] = `
<article
  className="expense-list__item"
>
  <header
    className="expense-list__item__header"
  >
    <h4
      className="expense-list__item__header__description"
    >
      <Link
        className="expense-list__item__header__description--link"
        to="/edit/3"
      >
        Credit Card
      </Link>
    </h4>
    <time
      className="expense-list__item__header__date"
      dateTime="Thu, 15 Jul 2010 23:00:00 GMT"
    >
      16 July 2010
    </time>
  </header>
  <section
    className="expense-list__item__note"
  >
    <p>
      Paying off loan to completion
    </p>
  </section>
  <section
    className="expense-list__item__amount"
  >
    <data
      value={4500}
    >
      MX$45.00
    </data>
  </section>
</article>
`;
